// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard online logged in renders as expected 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <DragDropContext(Dashboard)>
    <Dashboard>
      <DimmerDimmable
        blurring={true}
        className="jukebox-dashboard"
        dimmed={false}
      >
        <div
          className="blurring dimmable jukebox-dashboard"
        >
          <Settings>
            <Image
              as="img"
              floated="right"
              onClick={[Function]}
              rounded={true}
              size="mini"
              src="myImage123"
              title="Fred Spanner"
              ui={true}
            >
              <img
                className="ui mini rounded right floated image"
                onClick={[Function]}
                src="myImage123"
                title="Fred Spanner"
              />
            </Image>
          </Settings>
          <VolumeButtons
            disabled={false}
            onVolumeChange={[Function]}
            volume={25}
          >
            <ButtonGroup
              floated="right"
            >
              <div
                className="ui right floated buttons"
              >
                <Button
                  as="button"
                  className="jb-volume-down"
                  disabled={false}
                  onClick={[Function]}
                >
                  <Ref
                    innerRef={
                      Object {
                        "current": <button
                          class="ui button jb-volume-down"
                        >
                          <i
                            aria-hidden="true"
                            class="volume down icon"
                          />
                        </button>,
                      }
                    }
                  >
                    <RefFindNode
                      innerRef={
                        Object {
                          "current": <button
                            class="ui button jb-volume-down"
                          >
                            <i
                              aria-hidden="true"
                              class="volume down icon"
                            />
                          </button>,
                        }
                      }
                    >
                      <button
                        className="ui button jb-volume-down"
                        onClick={[Function]}
                      >
                        <Icon
                          as="i"
                          name="volume down"
                        >
                          <i
                            aria-hidden="true"
                            className="volume down icon"
                            onClick={[Function]}
                          />
                        </Icon>
                      </button>
                    </RefFindNode>
                  </Ref>
                </Button>
                <ButtonOr
                  text={25}
                >
                  <div
                    className="or"
                    data-text={25}
                  />
                </ButtonOr>
                <Button
                  as="button"
                  className="jb-volume-up"
                  disabled={false}
                  onClick={[Function]}
                >
                  <Ref
                    innerRef={
                      Object {
                        "current": <button
                          class="ui button jb-volume-up"
                        >
                          <i
                            aria-hidden="true"
                            class="volume up icon"
                          />
                        </button>,
                      }
                    }
                  >
                    <RefFindNode
                      innerRef={
                        Object {
                          "current": <button
                            class="ui button jb-volume-up"
                          >
                            <i
                              aria-hidden="true"
                              class="volume up icon"
                            />
                          </button>,
                        }
                      }
                    >
                      <button
                        className="ui button jb-volume-up"
                        onClick={[Function]}
                      >
                        <Icon
                          as="i"
                          name="volume up"
                        >
                          <i
                            aria-hidden="true"
                            className="volume up icon"
                            onClick={[Function]}
                          />
                        </Icon>
                      </button>
                    </RefFindNode>
                  </Ref>
                </Button>
              </div>
            </ButtonGroup>
          </VolumeButtons>
          <Controls
            disabled={false}
            onNext={[Function]}
            onPlay={[Function]}
            onPrevious={[Function]}
            onStop={[Function]}
            playbackState="playing"
          >
            <span>
              <SkipButtons
                disabled={false}
                onNext={[Function]}
                onPrevious={[Function]}
              >
                <span>
                  <Button
                    animated="vertical"
                    as="button"
                    className="jb-previous-button"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <Ref
                      innerRef={
                        Object {
                          "current": <button
                            class="ui vertical animated button jb-previous-button"
                          >
                            <div
                              class="hidden content"
                            >
                              Prev
                            </div>
                            <div
                              class="visible content"
                            >
                              <i
                                aria-hidden="true"
                                class="step backward icon"
                              />
                            </div>
                          </button>,
                        }
                      }
                    >
                      <RefFindNode
                        innerRef={
                          Object {
                            "current": <button
                              class="ui vertical animated button jb-previous-button"
                            >
                              <div
                                class="hidden content"
                              >
                                Prev
                              </div>
                              <div
                                class="visible content"
                              >
                                <i
                                  aria-hidden="true"
                                  class="step backward icon"
                                />
                              </div>
                            </button>,
                          }
                        }
                      >
                        <button
                          className="ui vertical animated button jb-previous-button"
                          onClick={[Function]}
                        >
                          <ButtonContent
                            hidden={true}
                          >
                            <div
                              className="hidden content"
                            >
                              Prev
                            </div>
                          </ButtonContent>
                          <ButtonContent
                            visible={true}
                          >
                            <div
                              className="visible content"
                            >
                              <Icon
                                as="i"
                                name="step backward"
                              >
                                <i
                                  aria-hidden="true"
                                  className="step backward icon"
                                  onClick={[Function]}
                                />
                              </Icon>
                            </div>
                          </ButtonContent>
                        </button>
                      </RefFindNode>
                    </Ref>
                  </Button>
                  <Button
                    animated="vertical"
                    as="button"
                    className="jb-next-button"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <Ref
                      innerRef={
                        Object {
                          "current": <button
                            class="ui vertical animated button jb-next-button"
                          >
                            <div
                              class="hidden content"
                            >
                              Next
                            </div>
                            <div
                              class="visible content"
                            >
                              <i
                                aria-hidden="true"
                                class="step forward icon"
                              />
                            </div>
                          </button>,
                        }
                      }
                    >
                      <RefFindNode
                        innerRef={
                          Object {
                            "current": <button
                              class="ui vertical animated button jb-next-button"
                            >
                              <div
                                class="hidden content"
                              >
                                Next
                              </div>
                              <div
                                class="visible content"
                              >
                                <i
                                  aria-hidden="true"
                                  class="step forward icon"
                                />
                              </div>
                            </button>,
                          }
                        }
                      >
                        <button
                          className="ui vertical animated button jb-next-button"
                          onClick={[Function]}
                        >
                          <ButtonContent
                            hidden={true}
                          >
                            <div
                              className="hidden content"
                            >
                              Next
                            </div>
                          </ButtonContent>
                          <ButtonContent
                            visible={true}
                          >
                            <div
                              className="visible content"
                            >
                              <Icon
                                as="i"
                                name="step forward"
                              >
                                <i
                                  aria-hidden="true"
                                  className="step forward icon"
                                  onClick={[Function]}
                                />
                              </Icon>
                            </div>
                          </ButtonContent>
                        </button>
                      </RefFindNode>
                    </Ref>
                  </Button>
                </span>
              </SkipButtons>
              <Button
                active={true}
                animated="vertical"
                as="button"
                className="jb-play-button"
                disabled={true}
                onClick={[Function]}
              >
                <Ref
                  innerRef={
                    Object {
                      "current": <button
                        class="ui active vertical animated disabled button jb-play-button"
                        disabled=""
                        tabindex="-1"
                      >
                        <div
                          class="hidden content"
                        >
                          Play
                        </div>
                        <div
                          class="visible content"
                        >
                          <i
                            aria-hidden="true"
                            class="play icon"
                          />
                        </div>
                      </button>,
                    }
                  }
                >
                  <RefFindNode
                    innerRef={
                      Object {
                        "current": <button
                          class="ui active vertical animated disabled button jb-play-button"
                          disabled=""
                          tabindex="-1"
                        >
                          <div
                            class="hidden content"
                          >
                            Play
                          </div>
                          <div
                            class="visible content"
                          >
                            <i
                              aria-hidden="true"
                              class="play icon"
                            />
                          </div>
                        </button>,
                      }
                    }
                  >
                    <button
                      className="ui active vertical animated disabled button jb-play-button"
                      disabled={true}
                      onClick={[Function]}
                      tabIndex={-1}
                    >
                      <ButtonContent
                        hidden={true}
                      >
                        <div
                          className="hidden content"
                        >
                          Play
                        </div>
                      </ButtonContent>
                      <ButtonContent
                        visible={true}
                      >
                        <div
                          className="visible content"
                        >
                          <Icon
                            as="i"
                            name="play"
                          >
                            <i
                              aria-hidden="true"
                              className="play icon"
                              onClick={[Function]}
                            />
                          </Icon>
                        </div>
                      </ButtonContent>
                    </button>
                  </RefFindNode>
                </Ref>
              </Button>
              <Button
                active={false}
                animated="vertical"
                as="button"
                className="jb-stop-button"
                disabled={false}
                onClick={[Function]}
              >
                <Ref
                  innerRef={
                    Object {
                      "current": <button
                        class="ui vertical animated button jb-stop-button"
                      >
                        <div
                          class="hidden content"
                        >
                          Stop
                        </div>
                        <div
                          class="visible content"
                        >
                          <i
                            aria-hidden="true"
                            class="stop icon"
                          />
                        </div>
                      </button>,
                    }
                  }
                >
                  <RefFindNode
                    innerRef={
                      Object {
                        "current": <button
                          class="ui vertical animated button jb-stop-button"
                        >
                          <div
                            class="hidden content"
                          >
                            Stop
                          </div>
                          <div
                            class="visible content"
                          >
                            <i
                              aria-hidden="true"
                              class="stop icon"
                            />
                          </div>
                        </button>,
                      }
                    }
                  >
                    <button
                      className="ui vertical animated button jb-stop-button"
                      onClick={[Function]}
                    >
                      <ButtonContent
                        hidden={true}
                      >
                        <div
                          className="hidden content"
                        >
                          Stop
                        </div>
                      </ButtonContent>
                      <ButtonContent
                        visible={true}
                      >
                        <div
                          className="visible content"
                        >
                          <Icon
                            as="i"
                            name="stop"
                          >
                            <i
                              aria-hidden="true"
                              className="stop icon"
                              onClick={[Function]}
                            />
                          </Icon>
                        </div>
                      </ButtonContent>
                    </button>
                  </RefFindNode>
                </Ref>
              </Button>
            </span>
          </Controls>
          <Divider>
            <div
              className="ui divider"
            />
          </Divider>
          <Grid
            columns={2}
          >
            <div
              className="ui two column grid"
            >
              <GridColumn
                width={4}
              >
                <div
                  className="four wide column"
                >
                  <DragInTrack
                    disabled={false}
                    onDrop={[Function]}
                  >
                    <Component
                      backend={[Function]}
                    >
                      <DropTarget(UrlDropArea)
                        accepts={
                          Array [
                            "__NATIVE_URL__",
                          ]
                        }
                        onDrop={[Function]}
                      >
                        <UrlDropArea
                          accepts={
                            Array [
                              "__NATIVE_URL__",
                            ]
                          }
                          connectDropTarget={[Function]}
                          onDrop={[Function]}
                        >
                          <div
                            title="Drag in Spotify tracks to add to playlist"
                          >
                            <Header
                              size="small"
                            >
                              <div
                                className="ui small header"
                              >
                                Current Track
                              </div>
                            </Header>
                            <Connect(CurrentTrackContainer)>
                              <CurrentTrackContainer
                                dispatch={[Function]}
                                image={null}
                                progress={NaN}
                              >
                                <CurrentTrack
                                  image={null}
                                  progress={NaN}
                                >
                                  <Card>
                                    <div
                                      className="ui card"
                                      onClick={[Function]}
                                    >
                                      <Image
                                        as="img"
                                        src="default-artwork.png"
                                        ui={true}
                                      >
                                        <img
                                          className="ui image"
                                          src="default-artwork.png"
                                        />
                                      </Image>
                                      <CardContent>
                                        <div
                                          className="content"
                                        >
                                          <CardHeader>
                                            <div
                                              className="header"
                                            >
                                              Nothing playing
                                            </div>
                                          </CardHeader>
                                          <CardDescription>
                                            <div
                                              className="description"
                                            >
                                              Drag some music here or press play.
                                            </div>
                                          </CardDescription>
                                        </div>
                                      </CardContent>
                                    </div>
                                  </Card>
                                </CurrentTrack>
                              </CurrentTrackContainer>
                            </Connect(CurrentTrackContainer)>
                          </div>
                        </UrlDropArea>
                      </DropTarget(UrlDropArea)>
                    </Component>
                  </DragInTrack>
                </div>
              </GridColumn>
              <GridColumn
                width={12}
              >
                <div
                  className="twelve wide column"
                >
                  <Header
                    size="small"
                  >
                    <div
                      className="ui small header"
                    >
                      Playlist 
                      <ClearPlaylist
                        disabled={false}
                        onClear={[Function]}
                      >
                        <span>
                          <Label
                            as="a"
                            className="jb-clear-button"
                            color="red"
                            horizontal={true}
                            onClick={[Function]}
                            size="mini"
                          >
                            <a
                              className="ui red mini horizontal label jb-clear-button"
                              onClick={[Function]}
                            >
                              CLEAR
                            </a>
                          </Label>
                          <Confirm
                            cancelButton="No thanks"
                            confirmButton="Do it!"
                            content="Are you sure you want to nuke the playlist?"
                            onCancel={[Function]}
                            onConfirm={[Function]}
                            open={false}
                            size="small"
                          >
                            <Modal
                              centered={true}
                              closeOnDimmerClick={true}
                              closeOnDocumentClick={false}
                              dimmer={true}
                              eventPool="Modal"
                              onClose={[Function]}
                              open={false}
                              size="small"
                            >
                              <Portal
                                closeOnDocumentClick={false}
                                closeOnEscape={true}
                                eventPool="Modal"
                                mountNode={<body />}
                                onClose={[Function]}
                                onMount={[Function]}
                                onOpen={[Function]}
                                onUnmount={[Function]}
                                open={false}
                                openOnTriggerClick={true}
                              />
                            </Modal>
                          </Confirm>
                        </span>
                      </ClearPlaylist>
                    </div>
                  </Header>
                  <Tracklist
                    disabled={false}
                    images={Object {}}
                    onRemoveTrack={[Function]}
                    tracks={Array []}
                  >
                    <List
                      relaxed={true}
                    >
                      <div
                        className="ui relaxed list"
                        role="list"
                      />
                    </List>
                  </Tracklist>
                </div>
              </GridColumn>
            </div>
          </Grid>
        </div>
      </DimmerDimmable>
    </Dashboard>
  </DragDropContext(Dashboard)>
</Provider>
`;

exports[`Dashboard online logged out renders as expected 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <DragDropContext(Dashboard)>
    <Dashboard>
      <DimmerDimmable
        blurring={true}
        className="jukebox-dashboard"
        dimmed={false}
      >
        <div
          className="blurring dimmable jukebox-dashboard"
        >
          <Settings>
            <Button
              as="button"
              className="jb-settings-toggle"
              floated="right"
              icon="power off"
              onClick={[Function]}
              title="Login using Google"
            >
              <Ref
                innerRef={
                  Object {
                    "current": <button
                      class="ui icon right floated button jb-settings-toggle"
                      title="Login using Google"
                    >
                      <i
                        aria-hidden="true"
                        class="power off icon"
                      />
                    </button>,
                  }
                }
              >
                <RefFindNode
                  innerRef={
                    Object {
                      "current": <button
                        class="ui icon right floated button jb-settings-toggle"
                        title="Login using Google"
                      >
                        <i
                          aria-hidden="true"
                          class="power off icon"
                        />
                      </button>,
                    }
                  }
                >
                  <button
                    className="ui icon right floated button jb-settings-toggle"
                    onClick={[Function]}
                    title="Login using Google"
                  >
                    <Icon
                      as="i"
                      name="power off"
                    >
                      <i
                        aria-hidden="true"
                        className="power off icon"
                        onClick={[Function]}
                      />
                    </Icon>
                  </button>
                </RefFindNode>
              </Ref>
            </Button>
          </Settings>
          <VolumeButtons
            disabled={true}
            onVolumeChange={[Function]}
            volume={25}
          >
            <ButtonGroup
              floated="right"
            >
              <div
                className="ui right floated buttons"
              >
                <Button
                  as="button"
                  className="jb-volume-down"
                  disabled={true}
                  onClick={[Function]}
                >
                  <Ref
                    innerRef={
                      Object {
                        "current": <button
                          class="ui disabled button jb-volume-down"
                          disabled=""
                          tabindex="-1"
                        >
                          <i
                            aria-hidden="true"
                            class="volume down icon"
                          />
                        </button>,
                      }
                    }
                  >
                    <RefFindNode
                      innerRef={
                        Object {
                          "current": <button
                            class="ui disabled button jb-volume-down"
                            disabled=""
                            tabindex="-1"
                          >
                            <i
                              aria-hidden="true"
                              class="volume down icon"
                            />
                          </button>,
                        }
                      }
                    >
                      <button
                        className="ui disabled button jb-volume-down"
                        disabled={true}
                        onClick={[Function]}
                        tabIndex={-1}
                      >
                        <Icon
                          as="i"
                          name="volume down"
                        >
                          <i
                            aria-hidden="true"
                            className="volume down icon"
                            onClick={[Function]}
                          />
                        </Icon>
                      </button>
                    </RefFindNode>
                  </Ref>
                </Button>
                <ButtonOr
                  text={25}
                >
                  <div
                    className="or"
                    data-text={25}
                  />
                </ButtonOr>
                <Button
                  as="button"
                  className="jb-volume-up"
                  disabled={true}
                  onClick={[Function]}
                >
                  <Ref
                    innerRef={
                      Object {
                        "current": <button
                          class="ui disabled button jb-volume-up"
                          disabled=""
                          tabindex="-1"
                        >
                          <i
                            aria-hidden="true"
                            class="volume up icon"
                          />
                        </button>,
                      }
                    }
                  >
                    <RefFindNode
                      innerRef={
                        Object {
                          "current": <button
                            class="ui disabled button jb-volume-up"
                            disabled=""
                            tabindex="-1"
                          >
                            <i
                              aria-hidden="true"
                              class="volume up icon"
                            />
                          </button>,
                        }
                      }
                    >
                      <button
                        className="ui disabled button jb-volume-up"
                        disabled={true}
                        onClick={[Function]}
                        tabIndex={-1}
                      >
                        <Icon
                          as="i"
                          name="volume up"
                        >
                          <i
                            aria-hidden="true"
                            className="volume up icon"
                            onClick={[Function]}
                          />
                        </Icon>
                      </button>
                    </RefFindNode>
                  </Ref>
                </Button>
              </div>
            </ButtonGroup>
          </VolumeButtons>
          <Controls
            disabled={true}
            onNext={[Function]}
            onPlay={[Function]}
            onPrevious={[Function]}
            onStop={[Function]}
            playbackState="playing"
          >
            <span>
              <SkipButtons
                disabled={true}
                onNext={[Function]}
                onPrevious={[Function]}
              >
                <span>
                  <Button
                    animated="vertical"
                    as="button"
                    className="jb-previous-button"
                    disabled={true}
                    onClick={[Function]}
                  >
                    <Ref
                      innerRef={
                        Object {
                          "current": <button
                            class="ui vertical animated disabled button jb-previous-button"
                            disabled=""
                            tabindex="-1"
                          >
                            <div
                              class="hidden content"
                            >
                              Prev
                            </div>
                            <div
                              class="visible content"
                            >
                              <i
                                aria-hidden="true"
                                class="step backward icon"
                              />
                            </div>
                          </button>,
                        }
                      }
                    >
                      <RefFindNode
                        innerRef={
                          Object {
                            "current": <button
                              class="ui vertical animated disabled button jb-previous-button"
                              disabled=""
                              tabindex="-1"
                            >
                              <div
                                class="hidden content"
                              >
                                Prev
                              </div>
                              <div
                                class="visible content"
                              >
                                <i
                                  aria-hidden="true"
                                  class="step backward icon"
                                />
                              </div>
                            </button>,
                          }
                        }
                      >
                        <button
                          className="ui vertical animated disabled button jb-previous-button"
                          disabled={true}
                          onClick={[Function]}
                          tabIndex={-1}
                        >
                          <ButtonContent
                            hidden={true}
                          >
                            <div
                              className="hidden content"
                            >
                              Prev
                            </div>
                          </ButtonContent>
                          <ButtonContent
                            visible={true}
                          >
                            <div
                              className="visible content"
                            >
                              <Icon
                                as="i"
                                name="step backward"
                              >
                                <i
                                  aria-hidden="true"
                                  className="step backward icon"
                                  onClick={[Function]}
                                />
                              </Icon>
                            </div>
                          </ButtonContent>
                        </button>
                      </RefFindNode>
                    </Ref>
                  </Button>
                  <Button
                    animated="vertical"
                    as="button"
                    className="jb-next-button"
                    disabled={true}
                    onClick={[Function]}
                  >
                    <Ref
                      innerRef={
                        Object {
                          "current": <button
                            class="ui vertical animated disabled button jb-next-button"
                            disabled=""
                            tabindex="-1"
                          >
                            <div
                              class="hidden content"
                            >
                              Next
                            </div>
                            <div
                              class="visible content"
                            >
                              <i
                                aria-hidden="true"
                                class="step forward icon"
                              />
                            </div>
                          </button>,
                        }
                      }
                    >
                      <RefFindNode
                        innerRef={
                          Object {
                            "current": <button
                              class="ui vertical animated disabled button jb-next-button"
                              disabled=""
                              tabindex="-1"
                            >
                              <div
                                class="hidden content"
                              >
                                Next
                              </div>
                              <div
                                class="visible content"
                              >
                                <i
                                  aria-hidden="true"
                                  class="step forward icon"
                                />
                              </div>
                            </button>,
                          }
                        }
                      >
                        <button
                          className="ui vertical animated disabled button jb-next-button"
                          disabled={true}
                          onClick={[Function]}
                          tabIndex={-1}
                        >
                          <ButtonContent
                            hidden={true}
                          >
                            <div
                              className="hidden content"
                            >
                              Next
                            </div>
                          </ButtonContent>
                          <ButtonContent
                            visible={true}
                          >
                            <div
                              className="visible content"
                            >
                              <Icon
                                as="i"
                                name="step forward"
                              >
                                <i
                                  aria-hidden="true"
                                  className="step forward icon"
                                  onClick={[Function]}
                                />
                              </Icon>
                            </div>
                          </ButtonContent>
                        </button>
                      </RefFindNode>
                    </Ref>
                  </Button>
                </span>
              </SkipButtons>
              <Button
                active={true}
                animated="vertical"
                as="button"
                className="jb-play-button"
                disabled={true}
                onClick={[Function]}
              >
                <Ref
                  innerRef={
                    Object {
                      "current": <button
                        class="ui active vertical animated disabled button jb-play-button"
                        disabled=""
                        tabindex="-1"
                      >
                        <div
                          class="hidden content"
                        >
                          Play
                        </div>
                        <div
                          class="visible content"
                        >
                          <i
                            aria-hidden="true"
                            class="play icon"
                          />
                        </div>
                      </button>,
                    }
                  }
                >
                  <RefFindNode
                    innerRef={
                      Object {
                        "current": <button
                          class="ui active vertical animated disabled button jb-play-button"
                          disabled=""
                          tabindex="-1"
                        >
                          <div
                            class="hidden content"
                          >
                            Play
                          </div>
                          <div
                            class="visible content"
                          >
                            <i
                              aria-hidden="true"
                              class="play icon"
                            />
                          </div>
                        </button>,
                      }
                    }
                  >
                    <button
                      className="ui active vertical animated disabled button jb-play-button"
                      disabled={true}
                      onClick={[Function]}
                      tabIndex={-1}
                    >
                      <ButtonContent
                        hidden={true}
                      >
                        <div
                          className="hidden content"
                        >
                          Play
                        </div>
                      </ButtonContent>
                      <ButtonContent
                        visible={true}
                      >
                        <div
                          className="visible content"
                        >
                          <Icon
                            as="i"
                            name="play"
                          >
                            <i
                              aria-hidden="true"
                              className="play icon"
                              onClick={[Function]}
                            />
                          </Icon>
                        </div>
                      </ButtonContent>
                    </button>
                  </RefFindNode>
                </Ref>
              </Button>
              <Button
                active={false}
                animated="vertical"
                as="button"
                className="jb-stop-button"
                disabled={true}
                onClick={[Function]}
              >
                <Ref
                  innerRef={
                    Object {
                      "current": <button
                        class="ui vertical animated disabled button jb-stop-button"
                        disabled=""
                        tabindex="-1"
                      >
                        <div
                          class="hidden content"
                        >
                          Stop
                        </div>
                        <div
                          class="visible content"
                        >
                          <i
                            aria-hidden="true"
                            class="stop icon"
                          />
                        </div>
                      </button>,
                    }
                  }
                >
                  <RefFindNode
                    innerRef={
                      Object {
                        "current": <button
                          class="ui vertical animated disabled button jb-stop-button"
                          disabled=""
                          tabindex="-1"
                        >
                          <div
                            class="hidden content"
                          >
                            Stop
                          </div>
                          <div
                            class="visible content"
                          >
                            <i
                              aria-hidden="true"
                              class="stop icon"
                            />
                          </div>
                        </button>,
                      }
                    }
                  >
                    <button
                      className="ui vertical animated disabled button jb-stop-button"
                      disabled={true}
                      onClick={[Function]}
                      tabIndex={-1}
                    >
                      <ButtonContent
                        hidden={true}
                      >
                        <div
                          className="hidden content"
                        >
                          Stop
                        </div>
                      </ButtonContent>
                      <ButtonContent
                        visible={true}
                      >
                        <div
                          className="visible content"
                        >
                          <Icon
                            as="i"
                            name="stop"
                          >
                            <i
                              aria-hidden="true"
                              className="stop icon"
                              onClick={[Function]}
                            />
                          </Icon>
                        </div>
                      </ButtonContent>
                    </button>
                  </RefFindNode>
                </Ref>
              </Button>
            </span>
          </Controls>
          <Divider>
            <div
              className="ui divider"
            />
          </Divider>
          <Grid
            columns={2}
          >
            <div
              className="ui two column grid"
            >
              <GridColumn
                width={4}
              >
                <div
                  className="four wide column"
                >
                  <DragInTrack
                    disabled={true}
                    onDrop={[Function]}
                  >
                    <Header
                      size="small"
                    >
                      <div
                        className="ui small header"
                      >
                        Current Track
                      </div>
                    </Header>
                    <Connect(CurrentTrackContainer)>
                      <CurrentTrackContainer
                        dispatch={[Function]}
                        image={null}
                        progress={NaN}
                      >
                        <CurrentTrack
                          image={null}
                          progress={NaN}
                        >
                          <Card>
                            <div
                              className="ui card"
                              onClick={[Function]}
                            >
                              <Image
                                as="img"
                                src="default-artwork.png"
                                ui={true}
                              >
                                <img
                                  className="ui image"
                                  src="default-artwork.png"
                                />
                              </Image>
                              <CardContent>
                                <div
                                  className="content"
                                >
                                  <CardHeader>
                                    <div
                                      className="header"
                                    >
                                      Nothing playing
                                    </div>
                                  </CardHeader>
                                  <CardDescription>
                                    <div
                                      className="description"
                                    >
                                      Drag some music here or press play.
                                    </div>
                                  </CardDescription>
                                </div>
                              </CardContent>
                            </div>
                          </Card>
                        </CurrentTrack>
                      </CurrentTrackContainer>
                    </Connect(CurrentTrackContainer)>
                  </DragInTrack>
                </div>
              </GridColumn>
              <GridColumn
                width={12}
              >
                <div
                  className="twelve wide column"
                >
                  <Header
                    size="small"
                  >
                    <div
                      className="ui small header"
                    >
                      Playlist 
                      <ClearPlaylist
                        disabled={true}
                        onClear={[Function]}
                      />
                    </div>
                  </Header>
                  <Tracklist
                    disabled={true}
                    images={Object {}}
                    onRemoveTrack={[Function]}
                    tracks={Array []}
                  >
                    <List
                      relaxed={true}
                    >
                      <div
                        className="ui relaxed list"
                        role="list"
                      />
                    </List>
                  </Tracklist>
                </div>
              </GridColumn>
            </div>
          </Grid>
        </div>
      </DimmerDimmable>
    </Dashboard>
  </DragDropContext(Dashboard)>
</Provider>
`;
